--- a/src/main/webapp/template/menu.xhtml
+++ b/src/main/webapp/template/menu.xhtml
@@ -45,8 +45,11 @@
 					</div>
 				</form>
 			</div></li>
-
-		
+	<li class="nav-item">
+	<!-- <a class="nav-link text-dark" href="#{request.contextPath}/views/interviewCalender.xhtml" style="font-size:18px;"><i class="far fa-calendar-alt"></i></a> -->
+    	<h:outputLink styleClass="nav-link text-dark" value="interviewCalender.xhtml" style="font-size:18px;"><i class="far fa-calendar-alt"></i></h:outputLink>
+ 	 </li>
+			
 
 		<div class="topbar-divider d-none d-sm-block"></div>
 
