--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -6,15 +6,29 @@
 	xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 
 <h:head>
-
+	
 	<h:outputStylesheet library="css" name="bootstrap.min.css"></h:outputStylesheet>
 	<h:outputStylesheet library="css" name="dataTables.bootstrap4.min.css"></h:outputStylesheet>
-	<h:outputStylesheet library="webjars" name="font-awesome/5.8.2/css/all.min-jsf.css" />
-	<h:outputStylesheet library="webjars" name="font-awesome/5.8.2/css/v4-shims.min-jsf.css" />
+	<!-- <h:outputStylesheet library="webjars" name="font-awesome/5.8.2/css/all.min-jsf.css" />
+	<h:outputStylesheet library="webjars" name="font-awesome/5.8.2/css/v4-shims.min-jsf.css" /> -->
+	
+	<!-- Custom fonts for this template -->
+  	<h:outputStylesheet library="webjars" name="font-awesome/5.15.1/css/all.min-jsf.css" />
+  	<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"/>
+  	<!-- For calendar -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.css" />
+	<!-- summer note -->
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet"/>
+	
 	<h:outputStylesheet library="css" name="all.min.css"></h:outputStylesheet>
-	<h:outputStylesheet library="css" name="fontawesome.min.css"></h:outputStylesheet>
-	<h:outputStylesheet library="css" name="summernote.min.css"></h:outputStylesheet>
+	
+	<!-- <h:outputStylesheet library="css" name="fontawesome.min.css"></h:outputStylesheet>
+	<h:outputStylesheet library="css" name="summernote.min.css"></h:outputStylesheet> -->
+	
 	<h:outputStylesheet library="css" name="sb-admin-2.css"></h:outputStylesheet>
+	<!-- Custom styles for this page -->
+	<h:outputStylesheet library="vendor" name="datatables/dataTables.bootstrap4.min.css"></h:outputStylesheet>
+	
 	<h:outputStylesheet library="css" name="custom.css"></h:outputStylesheet>
 	<title><ui:insert name="title">Name</ui:insert></title>
 
@@ -22,85 +36,107 @@
 <body id="page-top">
 
   <!-- Page Wrapper -->
-  <div id="wrapper">
+	<div id="wrapper">
+		
+		<!-- Sidebar -->
+		<ui:include src="/template/sidebar.xhtml"></ui:include>
+		<!-- End of Sidebar -->
+		
+		<!-- Content Wrapper -->
+		<div id="content-wrapper" class="d-flex flex-column">
+		
+		  <!-- Main Content -->
+		 <div id="content">
+		
+		   <!-- Topbar -->
+		   <ui:include src="/template/topbar.xhtml" />
+		   <!-- End of Topbar -->
+		
+		   <!-- Begin Page Content -->
+		   <div class="container-fluid">
+				<!-- Page Heading -->
+				<h1 class="h3 text-gray-800 mb-3">
+				<ui:insert name="newValue"></ui:insert></h1>
+				<ui:insert name="content">Content...</ui:insert>
+				<ui:insert name="modals"></ui:insert>
+		     </div>
+		     <!-- /.container-fluid -->
+		
+		 </div>
+		 <!-- End of Main Content -->
+		
+		<!-- Footer -->
+		<ui:include src="/template/footer.xhtml" />
+		<!-- End of Footer -->
+		
+		</div>
+		<!-- End of Content Wrapper -->
+	</div>
+	<!-- End of Page Wrapper -->
+	
+	<!-- Scroll to Top Button-->
+	<a class="scroll-to-top rounded" href="#page-top">
+	  <i class="fas fa-angle-up"></i>
+	</a>
+	<!-- Logout Modal-->
+	<ui:include src="/template/logout.xhtml" />
+	
+	<ui:include src="/template/modals.xhtml" />
+	<!-- Page level resources -->
+ 	<!-- <ui:insert name="modals"></ui:insert>  -->
+	<!-- End of Page level resources -->
 
-    <ui:include src="/template/sidebar.xhtml" />
 
-    <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
+	<!-- Bootstrap core JavaScript-->
+	<h:outputScript library="vendor" name="jquery/jquery.min.js"></h:outputScript>
+	<!-- sweetalert -->
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	
+	<!-- summer note -->
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
+	<h:outputScript library="vendor" name="bootstrap/js/bootstrap.bundle.min.js"></h:outputScript>
+	
+	<!-- Core plugin JavaScript-->
+	<h:outputScript library="vendor" name="jquery-easing/jquery.easing.min.js"></h:outputScript>
+	
+	<!-- Custom scripts for all pages-->
+	<h:outputScript library="js" name="sb-admin-2.min.js"></h:outputScript>
 
-      <!-- Main Content -->
-      <div id="content" >
+	<!-- Page level plugins -->
+	<h:outputScript library="vendor" name="datatables/jquery.dataTables.min.js"></h:outputScript>
+	<h:outputScript library="vendor" name="datatables/dataTables.bootstrap4.min.js"></h:outputScript>
 
-        <ui:include src="/template/menu.xhtml" />
-
-        <ui:insert name="main_content">
-				
-			</ui:insert>
-
-      </div>
-      <!-- End of Main Content -->
-
-      <!-- Footer -->
-      <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-          <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2020</span>
-          </div>
-        </div>
-      </footer>
-      <!-- End of Footer -->
-
-    </div>
-    <!-- End of Content Wrapper -->
-
-  </div>
-  <!-- End of Page Wrapper -->
-
-  <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-  </a>
-
-<ui:include src="/template/modals.xhtml" />
-<ui:insert name="modals">
-				
-			</ui:insert>
-
-  	<h:outputScript library="js" name="jquery.min.js"></h:outputScript>
-	<h:outputScript library="js" name="bootstrap.bundle.min.js"></h:outputScript>
-	<h:outputScript library="js" name="fontawesome.min.js"></h:outputScript>
-	<h:outputScript library="js" name="summernote.min.js"></h:outputScript>
-	<h:outputScript library="js" name="jquery.easing.min.js"></h:outputScript>
-	<h:outputScript library="js" name="jquery.dataTables.min.js"></h:outputScript>
-	<h:outputScript library="js" name="dataTables.bootstrap4.min.js"></h:outputScript>
-	<h:outputScript library="js" name="Chart.min.js"></h:outputScript>
+	<!-- Page level custom scripts -->
+	<h:outputScript library="js" name="demo/datatables-demo.js"></h:outputScript>
+	
+	<!-- Calendar -->
+	<script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js"></script>
+	<h:outputScript library="js" name="calendar.js"></h:outputScript>
+	<!-- Chart -->
+<!-- 	<h:outputScript library="js" name="Chart.min.js"></h:outputScript>
 	<h:outputScript library="js" name="chart-area-demo.js"></h:outputScript>
-	<h:outputScript library="js" name="chart-pie-demo.js"></h:outputScript>
-	<h:outputScript library="js" name="sweetalert.min.js"></h:outputScript>
-	<h:outputScript library="js" name="myjs.js"></h:outputScript>
+	<h:outputScript library="js" name="chart-pie-demo.js"></h:outputScript> -->
+	
  	
- 	<script type="text/javascript">
+ 	<!-- <script type="text/javascript">
  	$(document).ready(function() {
- 		$('#edit_jobpipeline').on('click', function() {
- 		    $('#JobpipelineModal').show();
- 		});
- 		  $('.table').DataTable();
+ 		 $('.table-bordered').DataTable();
  		 $('#summernote').summernote();
 
-
- 		 
  		});
- 	</script>
+ 	</script> -->
  	
- 	<ui:insert name="custom_js">
+ 	<!-- summer note -->
+		<script type="text/javascript">
+	 	$(document).ready(function() {
+	 		  $('.table').DataTable();
+	 		 $('#summernote').summernote();
+	 		});
+	</script>
+	
+ 	<ui:insert name="scripts">
 				
 	</ui:insert>
  	
 </body>
-
-
-
-
-
 </html>
