--- a/src/main/webapp/template/sidebar.xhtml
+++ b/src/main/webapp/template/sidebar.xhtml
@@ -1,89 +1,94 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"> 
 
 <h:head></h:head> 
 <body> 
 	<ui:composition>
 		<!-- Sidebar -->
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
-	id="accordionSidebar">
-
-	<!-- Sidebar - Brand -->
-	<a
-		class="sidebar-brand d-flex align-items-center justify-content-center"
-		href="index.html">
-		<div class="sidebar-brand-icon rotate-n-15">
-			<i class="fas fa-users"></i>
-		</div>
-		<div class="sidebar-brand-text mx-3">
-			SB Admin <sup>2</sup>
-		</div>
-	</a>
-
-	<!-- Divider -->
-	<hr class="sidebar-divider my-0"/>
-
-	<!-- Nav Item - Dashboard -->
-	<li class="nav-item active"><a class="nav-link" href="index.html">
-			<i class="fas fa-fw fa-tachometer-alt"></i> <span>Dashboard</span>
-	</a></li>
-
-	<!-- Divider -->
-	<hr class="sidebar-divider"/>
-
-	<!-- Heading -->
-	<div class="sidebar-heading">Interface</div>
-
-	<!-- Nav Item - Pages Collapse Menu -->
-	<li class="nav-item">
-		 <h:link value="" outcome="/views/joborders" styleClass="nav-link">
-		 <i class="fas fa-suitcase text-white mr-2"></i>Job Orders
-		 </h:link>
-	</li>
-
-	<li class="nav-item">
-			<h:link value=""
-					outcome="/views/candidates" styleClass="nav-link"><i class="fas fa-user-friends text-white mr-2"></i>Candidates</h:link>
-	</li>
-
-	<li class="nav-item">
-	<h:link value=""
-					outcome="/views/companys" styleClass="nav-link"><i class="fa fa-building text-white mr-2"></i>Companies</h:link>
-	</li>
-
-
-
-	<!-- Divider -->
-	<hr class="sidebar-divider"/>
-
-	<!-- Heading -->
-	<div class="sidebar-heading">Addons</div>
-
-	<li class="nav-item">
-		<h:link value=""
-					outcome="/views/recruiters" styleClass="nav-link"><i class="fas fa-user-cog text-white mr-2"></i>Recruiters</h:link>
-	</li>
-
-	<li class="nav-item">
-		<a class="nav-link" href="charts.html"> <i
-				class=""></i> <span><i class="fas fa-calendar-day text-white mr-2"></i>Activities</span>
-		</a>
-	</li>
-
-	<!-- Divider -->
-	<hr class="sidebar-divider d-none d-md-block"/>
-
-	<!-- Sidebar Toggler (Sidebar) -->
-	<div class="text-center d-none d-md-inline">
-		<button class="rounded-circle border-0" id="sidebarToggle"></button>
-	</div>
-
-</ul>
-<!-- End of Sidebar -->
+	    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+	
+	      <!-- Sidebar - Brand -->
+	      <h:link class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+	        <div class="sidebar-brand-icon rotate-n-15">
+	          <i class="fas fa-link"></i>
+	        </div>
+	        <div class="sidebar-brand-text mx-3">Recruiter</div>
+	      </h:link>
+	
+	      <!-- Divider -->
+	      <hr class="sidebar-divider my-0"/>
+	
+	      <!-- Nav Item - Dashboard -->
+	      <li class="nav-item">
+	        <h:link class="nav-link" outcome="/views/dashboard">
+	          <i class="fas fa-fw fa-tachometer-alt"></i>
+	          <span>Dashboard</span>
+	        </h:link>
+	      </li>
+	
+	      <!-- Divider -->
+	      <hr class="sidebar-divider"/>
+	
+	      <!-- Heading -->
+	      <div class="sidebar-heading">
+	        Interface
+	      </div>
+		
+			<li class="nav-item">
+				<h:link class="nav-link collapsed" outcome="/views/joborders">
+					<i class="fas fa-briefcase"></i> <span>Job Order</span>
+				</h:link>
+			</li>
+	
+			<li class="nav-item">
+				<h:link class="nav-link collapsed" outcome="/views/candidates"> 
+					<i class="fas fa-users"></i> <span>Candidates</span>
+				</h:link> 
+			</li>	
+	
+			<li class="nav-item">
+				<h:link class="nav-link collapsed" outcome="/views/companies"> 
+					<i class="far fa-building"></i> <span>Company</span>
+				</h:link> 	
+			</li>
+		
+		  <!-- Divider -->
+	      <hr class="sidebar-divider"/>
+	      <!-- Heading -->
+	      <div class="sidebar-heading">
+	        Addons
+	      </div>
+			<li class="nav-item">
+				<h:link class="nav-link collapsed" outcome="/views/recruiters"> 
+					<i class="far fa-building"></i> <span>Recruiter</span>
+				</h:link> 	
+			</li>
+			<li class="nav-item">
+				<h:link class="nav-link collapsed" outcome="/views/activities"> 
+					<i class="far fa-building"></i> <span>Activities</span>
+				</h:link> 	
+			</li>
+			
+			<hr class="sidebar-divider"/>
+	      <!-- Nav Item - Tables -->
+<!-- 	      <li class="nav-item active">
+	        <a class="nav-link" href="tables.html">
+	          <i class="fas fa-fw fa-table"></i>
+	          <span>Tables</span></a>
+	      </li> -->
+	
+	
+	      <!-- Sidebar Toggler (Sidebar) -->
+	      <div class="text-center d-none d-md-inline">
+	        <button class="rounded-circle border-0" id="sidebarToggle"></button>
+	      </div>
+	
+	    </ul>
+    	<!-- End of Sidebar -->
 	</ui:composition>
 </body> 
 </html>
